src/objects/sdfs__FormulaShare_Targeted_Job_Summary__c.object
<CustomObject>
    <fields>
        <fullName>sdfs__FormulaShare_Targeted_Job_Name__c</fullName>
        <description>Name of the custom metadata record corresponding to this job</description>
        <label>FormulaShare Targeted Job Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Last_Run_Completed__c</fullName>
        <label>Last Run Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sdfs__Last_Run_Started__c</fullName>
        <label>Last Run Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sdfs__Next_Scheduled_Run__c</fullName>
        <description>Indicates the date and time of the next run of this targeted job. Job will be executed at the next running of Targeted Jobs batch which is on or after this date and time</description>
        <label>Next Scheduled Run</label>
        <type>DateTime</type>
    </fields>
    <label>FormulaShare Targeted Job Summary</label>
    <nameField>
        <displayFormat>FSTJS-{0000000}</displayFormat>
        <label>FormulaShare Targeted Job Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FormulaShare Targeted Job Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>